styles.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");

* {
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
	font-size: 0.9rem;
}

html {
	font-size: x-large;
	font-family: Helvetica, sans-serif;

	background: linear-gradient(rgb(0, 108, 108), rgb(0, 74, 74));
	background-attachment: fixed;
}

#content {
	margin: 3em 0em;
	max-width: 75vw;
	min-width: 25em;
	margin: auto;
}

#table {
	background: url("./wood.webp");

	padding: 2em;
	border-radius: 0.5em;
	box-shadow: 0.3em 0.3em rgba(0, 0, 0, 0.5);
	border: 0.2em solid rgb(78, 39, 11);
	background-size: 100%;
	background-repeat: repeat;
	margin: 1rem;
}

footer {
	font-weight: bold;
	text-shadow: 0.15em 0.15em rgba(0, 0, 0, 0.5);
	color: aliceblue;
	margin: auto;
	text-align: center;
	font-size: x-large;
}

footer p {
	background: rgba(0, 0, 0, 0.2);
	border-radius: 0.2em;
	padding: 0.3em;
	margin: auto;
	width: fit-content;
}

h1 {
	margin-top: 0.5em;
	color: white;
	text-shadow: 0.05em 0.05em rgba(0, 0, 0, 0.5);
	font-family: "Ubuntu", sans-serif;
	padding: 0.2em;
	text-align: center;
	font-size: 1.5em;
	background: linear-gradient(rgb(117, 117, 117), rgb(85, 85, 85));
	margin-right: 40%;
	box-shadow: 0.1em 0.1em rgba(0, 0, 0, 0.5);
	border-radius: 0.2em;
	border: 0.08em solid rgb(70, 70, 70);
}

#calculator {
	width: 20em;
	margin: auto;
	background: white;
	padding: 1em;
	padding-top: 0.1em;
	border-radius: 0.5em;
	background: linear-gradient(gray, rgb(76, 76, 76));
	box-shadow: 0.4em 0.4em rgba(0, 0, 0, 0.5);
	border: 0.2em solid rgb(48, 48, 48);
}

#screen {
	padding: 0.25em;
	font-size: 2em;
	font-family: "Orbitron", sans-serif;
	background: linear-gradient(green, rgb(0, 86, 0));
	color: white;

	box-sizing: border-box;
	border: 0.12em solid black;
	border-radius: 0.25em;

	box-shadow: 0.15em 0.15em rgba(0, 0, 0, 0.5);

	margin: 1em 0em;
}

#button-pad {
	display: grid;
	gap: 0.5em;
	grid-template-columns: repeat(4, 1fr);
}

button {
	font-size: inherit;
	font-family: inherit;
	font-weight: bold;

	aspect-ratio: 1/1;
	border-radius: 100%;
	border: none;
	box-shadow: 0.25em 0.25em rgba(0, 0, 0, 0.5);
}

button:hover {
	filter: brightness(85%);
}

button:active {
	transform: translateY(0.15em) translateX(0.15em);
	box-shadow: 0.1em 0.1em rgba(0, 0, 0, 0.5);
}

.number {
	background: linear-gradient(antiquewhite, rgb(194, 182, 167));
	border: 0.15em solid rgb(124, 117, 106);
}

.operation {
	color: white;
	background: linear-gradient(rgb(177, 119, 75), rgb(126, 85, 53));
	border: 0.15em solid rgb(103, 69, 43);
}

.function {
	color: white;
	background: linear-gradient(rgb(77, 97, 176), rgb(51, 64, 116));
	border: 0.15em solid rgb(51, 64, 116);
}

.equal {
	color: white;
	background: linear-gradient(orangered, rgb(170, 45, 0));
	border: 0.15em solid rgb(137, 36, 0);
}

@media screen and (max-width: 576px) {
	body {
		font-size: large;
	}
	html {
		padding: 0%;
	}
	#content {
		min-width: 40vh;
		max-width: 100vw;
	}
	#table {
		padding: 1em 0.5em;
		border-radius: 0%;
		border-right: none;
		border-left: none;
		border-top: none;
		margin-bottom: 1em;
	}
	#calculator {
		width: 100%;
	}
	h1 {
		font-size: 1.8em;
	}
	button {
		font-size: 1.4em;
	}
	footer p {
		width: 90%;
		font-size: 1em;
	}
	#screen {
		border-width: 0.15em;
	}
}

